@@ -37,16 +37,6 @@ configure-stamp:
 		--build=$(DEB_BUILD_GNU_TYPE) \
 		--enable-expopt=full
 
-   # Patch the generated libtool to avoid passing -rpath when linking,
-   # and to explicitly link libraries against the libraries they depend
-   # on. (thanks Richard Braakman <dark@xs4all.nl>). Taken from:
-   # http://lists.debian.org/debian-devel/2002/debian-devel-200207/msg01792.html
-	sed < libtool > libtool-2 \
-		-e 's/^\(hardcode_libdir_flag_spec\).*$$/\1=" -D__LIBTOOL_IS_A_FOOL__ "/' \
-		-e '/^archive_cmds="/s/"$$/ \\$$deplibs"/'
-	mv libtool-2 libtool
-	chmod 755 libtool
-
 	touch configure-stamp
 
 build: configure-stamp build-stamp
@@ -75,7 +65,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/tmp
-	$(MAKE) DESTDIR=`pwd`/debian/tmp install
+	$(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
 
 
 # Build architecture-independent files here.
@@ -88,7 +78,7 @@ binary-arch: build install
 	dh_testroot
 	dh_movefiles --sourcedir=debian/tmp
 	dh_installdocs
-	dh_installman -Nlibmp3lame0 -Nlibmp3lame0-dev
+	dh_installman
 	dh_installchangelogs ChangeLog
 	dh_strip
 	dh_compress
